hphp/test/zend7/Zend/tests/parent_class_name_without_parent.php.expectf

Fatal error: %s
Stack trace:
#0 %s(%d): C->f()
#1 {main}
  thrown in %s on line 5